Remove calling of deprecated URL constructors